--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,2 @@
--e git+https://github.com/f5devcentral/f5-ctlr-agent.git@2fd5393a29ae9ec35de8c5c7dc6389f15e989668#egg=f5-ctlr-agent
--e git+https://github.com/f5devcentral/f5-cccl.git@ae25523e0b52abe0195b8208a1ac1b0fa4823eea#egg=f5-cccl
+-e git+https://github.com/agupta49/f5-ctlr-agent.git@432722ffafb1d559bafd12bc9d950ff97d31b7dd#egg=f5-ctlr-agent
+-e git+https://github.com/agupta49/f5-cccl.git@7b62ce251d5ed7eefd49ad9dde2a29361ddba992#egg=f5-cccl
