--- a/operator/helm-charts/f5-bigip-ctlr/templates/f5-bigip-ctlr-customresourcedefinitions.yml
+++ b/operator/helm-charts/f5-bigip-ctlr/templates/f5-bigip-ctlr-customresourcedefinitions.yml
@@ -1,3 +1,5 @@
+{{- if .Values.args.custom_resource_mode }}
+{{- if .Values.crd.install }}
 apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
@@ -289,3 +291,5 @@ spec:
                       - dataServerName
               required:
                 - domainName
+{{- end }}
+{{- end }}
