--- a/docs/_static/config_examples/crd/tls/tls-customresourcedefinition.yml
+++ b/docs/_static/config_examples/crd/tls/tls-customresourcedefinition.yml
@@ -41,4 +41,4 @@ spec:
                     reference:
                       type: string
                   required:
-                    - clientSSL
+                    - termination
